<resources>
    <string name="app_name">snow</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_forth">forth</string>
    <string name="item1">item1</string>
    <string name="item2">item2</string>
    <string name="item3">item3</string>

    <string name="basic_settings">设置</string>
    <string name="basic_help">帮助</string>
    <string name="basic_string_help_text">
        当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。
    </string>
    <string name="basic_quit">退出</string>

    <!--pickView相关字符资源-->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="picker_text_parse">解析数据</string>
    <string name="picker_text_show">显示省市区选择器</string>
    <string name="picker_custom_lunar">公农历切换</string>
    <string name="picker_time">时间选择器</string>
    <string name="picker_province">条件选择器</string>
    <string name="picker_custom_time">时间选择器自定义布局</string>
    <string name="picker_custom_province">条件选择器自定义布局</string>
    <string name="picker_custom_parent">自定义父容器</string>
    <string name="picker_non_linkage">条件选择器(不联动)</string>
    <string name="picker_json_parse_sample">省市区Json文件解析示例</string>
    <string name="broadcast1">标准广播</string>
    <string name="broadcast2">有序广播</string>
    <string name="btn_broadcast_register">注册所有广播</string>
    <string name="broadcast3">发送本地广播-同步</string>
    <string name="broadcast4">发送本地广播-异步</string>
</resources>
